<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PriscillaClient</string>
    <string name="hashtag_sign" translatable="false">#</string>
    <string name="level" translatable="false">LEVEL</string>
    <string name="coins" translatable="false">COINS</string>
    <string name="priscilla_logo" translatable="false">Priscilla logo</string>
    <string name="task_icon" translatable="false">Task icon</string>
    <string name="code_icon" translatable="false">Code icon</string>
    <string name="content_icon" translatable="false">Content icon</string>
    <string name="xp" translatable="false">XP</string>

    <string name="e_mail">E-mail</string>
    <string name="nickname">Nickname</string>
    <string name="username_or_email">Username or e-mail</string>
    <string name="password">Password</string>
    <string name="remember_login">Remember me</string>
    <string name="sign_in">Log in</string>
    <string name="register">Register</string>
    <string name="my_courses">My courses</string>
    <string name="lessons">Lessons</string>
    <string name="chapters">Chapters</string>
    <string name="dashboard">Dashboard</string>
    <string name="browse">Browse</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="primary_group">Primary group</string>
    <string name="student_type">Student type</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="birth_year">Birth year</string>
    <string name="save_changes">Save changes</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="answer">Answer</string>
    <string name="result">Result</string>
    <string name="done">DONE</string>
    <string name="settings_reset">All local settings will be reset!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="language_changed">Language preferences have changed. A restart is needed for the changes to take effect.</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="no_results">No results</string>
    <string name="settings_no_changes">No changes</string>
    <string name="balance">Current balance</string>
    <string name="execution">Execution</string>
    <string name="compilation">Compilation</string>
    <string name="join_course">Join course</string>
    <string name="join">JOIN</string>
</resources>