<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/settingsScrollView"
    tools:context=".fragments.user.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Options -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/options"
                android:textSize="24sp" />

            <!-- Full name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">
                <EditText
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:id="@+id/profileEditName"
                    android:autofillHints="name"
                    android:inputType="textPersonName" />
                <EditText
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:id="@+id/profileEditSurname"
                    android:autofillHints="name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <!-- Nickname -->
            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:id="@+id/profileEditNickname"
                android:autofillHints="username"
                android:inputType="textPersonName" />

            <!-- Group -->
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_group"
                android:textSize="18sp" />
            <Spinner
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:id="@+id/profileEditGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <!-- Student type -->
            <TextView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_type"
                android:textSize="18sp" />
            <Spinner
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:id="@+id/profileEditStudentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <!-- Country -->
            <TextView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="18sp" />
            <Spinner
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:id="@+id/profileEditCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <!-- Language -->
            <TextView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="18sp" />
            <Spinner
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:id="@+id/profileEditLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <!-- Theme -->
            <TextView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="18sp" />
            <Spinner
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:id="@+id/profileEditTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <!-- Birth year -->
            <TextView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_year"
                android:textSize="18sp" />
            <DatePicker
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/profileEditYear"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/settingsSaveButton"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/save_changes"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
</ScrollView>