<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.misc.LeaderboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#3800B3">

        <TextView
            android:textColor="#f1f1f1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/hashtag_sign" />

        <TextView
            android:textColor="#f1f1f1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="4"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/nickname" />

        <TextView
            android:textColor="#f1f1f1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/xp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/leaderboardList" />

</LinearLayout>