<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileScrollView"
    android:orientation="vertical"
    tools:context=".fragments.user.ProfileFragment">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header -->
            <LinearLayout
                android:background="?colorPrimaryVariant"
                android:id="@+id/profileHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:background="@drawable/profile_icon"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/usernameShort" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/usernameFull" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/profileNick" />
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp">


                    <!-- Row -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/level" />
                            <TextView
                                android:textSize="18sp"
                                android:id="@+id/profileLevel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/xp" />
                            <TextView
                                android:textSize="18sp"
                                android:id="@+id/profileXP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/coins"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">
                                <TextView
                                    android:text="0"
                                    android:textSize="18sp"
                                    android:id="@+id/profileCoins"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:drawablePadding="2dp"
                                    app:drawableRightCompat="@drawable/ic_tonality" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primary_group"/>
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/profileGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"/>
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_year"/>
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/profileYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"/>
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/profileCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/profileLogoutButton"
                        android:padding="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/log_out"
                        android:textSize="20sp"
                        android:textColor="#FF0000" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileSettingsButton"
            android:backgroundTint="?colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:borderWidth="0dp"
            android:contentDescription="@string/options"
            app:tint="?colorPrimary"
            android:src="@android:drawable/ic_menu_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>